data/derived/comb/progs/unify/prog0595.ml.out
Characters 502-506:
  | Crazy(e1, e2, e3) -> if (e1 > e2) then abs(e3) else (-abs(e3));;
                                              ^^^^
Error: This expression has type expr but an expression was expected of type
         int
